--- a/public/css/loader.css
+++ b/public/css/loader.css
@@ -22,6 +22,12 @@
   width: 80px;
   height: 80px;
 }
+.lds-roller.color--green {
+  display: inline-block;
+  position: relative;
+  width: 25px;
+  height: 25px;
+}
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
@@ -34,6 +40,16 @@
   height: 7px;
   border-radius: 50%;
   background: #000;
+  margin: -4px 0 0 -4px;
+}
+.lds-roller.color--green div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #9eff00;
   margin: -4px 0 0 -4px;
 }
 .lds-roller div:nth-child(1) {
